# advent_of_code

./: pyproject.toml
src/aoc2023/day3/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day1/: assignment1.py  assignment2.py
src/aoc2025/day1/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day10/: assignment1.py  assignment2.py
src/aoc2025/day10/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day11/: assignment1.py
src/aoc2025/day11/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day12/: assignment1.py  assignment2.py
src/aoc2025/day12/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day2/: assignment1.py  assignment2.py
src/aoc2025/day2/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day3/: assignment1.py  assignment2.py
src/aoc2025/day3/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day4/: assignment1.py  assignment2.py
src/aoc2025/day4/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day5/: assignment1.py  assignment2.py
src/aoc2025/day5/test/: input_keep_middle.txt  input_remove_middle.txt  test_assignment1.py  test_assignment2.py
src/aoc2025/day6/: assignment1.py  assignment2.py
src/aoc2025/day6/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day7/: assignment1.py  assignment2.py
src/aoc2025/day7/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day8/: assignment1.py  assignment2.py
src/aoc2025/day8/test/: test_assignment1.py  test_assignment2.py
src/aoc2025/day9/: assignment1.py  assignment2.py
(+2 files in other folders)
