[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Tim Jonker <85954232+timjonkerpostnl@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
shapely = "^2.0.2"
tqdm = "^4.66.1"
black = "^23.12.0"
scipy = "^1.11.4"
sympy = "^1.12"
pandas = "^2.3.3"
scikit-learn = "^1.7.2"
pulp = "^3.3.0"
ortools = "^9.14.6206"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py310']
include = '\.py$'
